--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-20.04, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9, '3.10']
 
     steps:
     - name: Set git crlf/eol
@@ -30,12 +30,12 @@ jobs:
         git config --global core.autocrlf false
         git config --global core.eol lf
 
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
         submodules: true
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -47,12 +47,13 @@ jobs:
     - name: Check for lint
       run: |
         tox -e lint
+
     - name: Install and test
       run: |
-        tox -e py
+        tox
+      env:
+        PLATFORM: ${{ matrix.os }}
+
     - name: Build dist pkgs
       run: |
-        tox -e deploy
-    - name: Test wheels
-      run: |
-        tox -e check
+        tox -e deploy,check
