chg: dev: add psutil dep so tox can find x-platform cpu count
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -38,11 +38,13 @@ allowlist_externals =
 
 deps =
     pip>=21.2
+    psutil
     -rrequirements-dev.txt
     -e .
 
 commands =
-    bash -c 'pytest -n $(nproc) {posargs}'
+    bash -c 'export NUM_PROC=$(python -c "import psutil; print(len(psutil.Process().cpu_affinity()))"); \
+        pytest -n $NUM_PROC {posargs}'
 
 [testenv:lint]
 passenv =
@@ -89,6 +91,7 @@ deps =
     pip>=21.2
     # we need this because setup.py has no requires o.O
     -rrequirements.txt
+    psutil
     pylint
     pytest-xdist
 
@@ -97,7 +100,8 @@ commands_pre =
     pip install pdfrw --force-reinstall --pre --prefer-binary -f dist/
 
 commands =
-    bash -c 'pytest -v -n $(nproc)'
+    bash -c 'export NUM_PROC=$(python -c "import psutil; print(len(psutil.Process().cpu_affinity()))"); \
+        pytest -n $NUM_PROC {posargs}'
 
 [testenv:clean]
 skip_install = true
