--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ deps =
     -e .
 
 commands =
-    bash -c 'export NUM_PROC=$(python -c "import psutil; print(len(psutil.Process().cpu_affinity()))"); \
+    bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
         pytest -n $NUM_PROC {posargs}'
 
 [testenv:lint]
@@ -100,7 +100,7 @@ commands_pre =
     pip install pdfrw --force-reinstall --pre --prefer-binary -f dist/
 
 commands =
-    bash -c 'export NUM_PROC=$(python -c "import psutil; print(len(psutil.Process().cpu_affinity()))"); \
+    bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
         pytest -n $NUM_PROC {posargs}'
 
 [testenv:clean]
