chg: dev: repackaging and cruft cleanup, add some tool cmds to tox file
* respin PEP517 package setup
* add git versioning using versioningit

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ tests/ramdisk
 tests/saved_results
 tests/tmp_results
 wiki/
-
+pdfrw/_version.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
