--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist = py3{6,7,8,9,10}-{linux,macos,windows}
 skip_missing_interpreters = true
-skipsdist=True
+skipsdist = true
 
 [gh-actions]
 python =
@@ -16,6 +16,17 @@ PLATFORM =
     ubuntu-20.04: linux
     macos-latest: macos
     windows-latest: windows
+
+[base]
+deps =
+    pip>=21.1
+    versioningit
+
+[build]
+deps =
+    pip>=21.1
+    build
+    twine
 
 [testenv]
 skip_install = true
@@ -37,14 +48,14 @@ allowlist_externals =
     bash
 
 deps =
-    pip>=21.2
+    {[base]deps}
     psutil
-    -rrequirements-dev.txt
-    -e .
+    -e .[test,cov]
 
 commands =
+    python -c "import pdfrw; print(pdfrw.__version__)"
     bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
-        pytest -n $NUM_PROC {posargs}'
+        pytest -n $NUM_PROC --capture=fd . --cov=pdfrw --cov-branch --cov-report term-missing pdfrw/'
 
 [testenv:lint]
 passenv =
@@ -53,25 +64,32 @@ passenv =
     PIP_DOWNLOAD_CACHE
     PYTHONIOENCODING
 
+allowlist_externals =
+    bash
+
 deps =
-    pip>=21.2
+    {[base]deps}
     pylint
     -rrequirements.txt
 
+commands_pre =
+    # need to generate version info in a fresh checkout
+    bash -c '[[ -f pdfrw/_version.py ]] || python setup.py egg_info'
+
 commands = pylint --fail-under=7 pdfrw/
 
-[testenv:deploy]
+[testenv:build]
 passenv =
     pythonLocation
     CI
+    GITHUB*
+    PYTHONIOENCODING
     PIP_DOWNLOAD_CACHE
 
 allowlist_externals = bash
 
 deps =
-    pip>=21.2
-    build
-    twine
+    {[build]deps}
 
 commands =
     python -m build .
@@ -89,10 +107,8 @@ allowlist_externals =
 
 deps =
     pip>=21.2
-    # we need this because setup.py has no requires o.O
-    -rrequirements.txt
     psutil
-    pylint
+    pytest
     pytest-xdist
 
 commands_pre =
@@ -101,7 +117,46 @@ commands_pre =
 
 commands =
     bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
-        pytest -n $NUM_PROC {posargs}'
+        pytest -n $NUM_PROC --capture=no {posargs}'
+
+[testenv:style]
+passenv =
+    CI
+    OS
+    PIP_DOWNLOAD_CACHE
+
+deps =
+    {[base]deps}
+    flake8
+    flake8-bugbear
+
+commands =
+    flake8 pdfrw/
+
+[testenv:mypy]
+skip_install = true
+
+setenv = PYTHONPATH = {toxinidir}
+
+deps =
+    {[base]deps}
+    -r requirements.txt
+    mypy
+
+commands =
+    python -m mypy --follow-imports=normal --install-types --non-interactive pdfrw/
+
+[testenv:isort]
+skip_install = true
+
+setenv = PYTHONPATH = {toxinidir}
+
+deps =
+    {[base]deps}
+    isort
+
+commands =
+    python -m isort pdfrw/
 
 [testenv:clean]
 skip_install = true
@@ -113,4 +168,4 @@ deps =
 
 commands =
     #bash -c 'make -C docs/ clean'
-    bash -c 'rm -rf build dist *.egg-info'
+    bash -c 'rm -rf build dist pdfrw/_version.py *.egg-info'
