chg: dev: apply black formatting fixes, add back (new) pylint cfg file
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,12 +32,6 @@ classifiers =
 [options]
 python_requires = >= 3.6
 
-install_requires =
-    pycryptodome >= 3.9.0
-    reportlab >= 3.5.46
-    Pillow >= 6.2.2
-
-#include_package_data = True
 packages =
     pdfrw
     pdfrw.objects
@@ -47,6 +41,13 @@ zip_safe = True
 # deps are included here mainly for local/venv installs using pip
 # otherwise deps are handled via tox, ci config files or pkg managers
 [options.extras_require]
+# these deps were only in reqs file, they are not strictly required
+# unless dealing with encrypted or reportlab-generated PDFs, or
+# converting images
+rpt =
+    pycryptodome >= 3.9.0
+    reportlab >= 3.5.46
+    Pillow >= 6.2.2
 test =
     pytest
     pytest-cov
