--- a/tox.ini
+++ b/tox.ini
@@ -76,7 +76,8 @@ commands_pre =
     # need to generate version info in a fresh checkout
     bash -c '[[ -f pdfrw/_version.py ]] || python setup.py egg_info'
 
-commands = pylint --fail-under=7 pdfrw/
+commands =
+    pylint --fail-under=7 --ignore=_version.py pdfrw/
 
 [testenv:build]
 passenv =
@@ -145,6 +146,18 @@ deps =
 
 commands =
     python -m mypy --follow-imports=normal --install-types --non-interactive pdfrw/
+
+[testenv:black]
+skip_install = true
+
+setenv = PYTHONPATH = {toxinidir}/src
+
+deps =
+    {[base]deps}
+    black
+
+commands =
+    black -v -S pdfrw/ {posargs}
 
 [testenv:isort]
 skip_install = true
