--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ build-backend = "setuptools.build_meta"
 
 [tool.coverage.run]
 branch = true
-source = ["pdfrw"]
+source = [
+    "pdfrw/",
+    ".tox/py*/lib/python*/site-packages/",
+]
 omit = [
     "tests",
     ".tox",
@@ -20,6 +23,13 @@ source = ["pdfrw"]
 [tool.coverage.report]
 fail_under = 70
 show_missing = true
+exclude_lines = [
+    "pragma: no cover",
+    "raise NotImplementedError",
+    "raise AssertionError",
+    "if typing.TYPE_CHECKING:",
+    "if TYPE_CHECKING:",
+]
 
 [tool.black]
 line-length = 90
