--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist = py3{6,7,8,9,10}-{linux,macos,windows}
+envlist = py3{6,7,8,9,10}-{linux,macos,windows},coverage
 skip_missing_interpreters = true
+isolated_build = true
 skipsdist = true
 
 [gh-actions]
@@ -32,6 +33,8 @@ deps =
 skip_install = true
 
 passenv =
+    DISPLAY
+    XAUTHORITY
     HOME
     USERNAME
     USER
@@ -43,6 +46,7 @@ passenv =
 
 setenv =
   PYTHONPATH={toxinidir}
+  COVERAGE_FILE=.coverage.{envname}
 
 allowlist_externals =
     bash
@@ -50,12 +54,39 @@ allowlist_externals =
 deps =
     {[base]deps}
     psutil
-    -e .[test,cov]
+    -e .[rpt,test,cov]
 
 commands =
     python -c "import pdfrw; print(pdfrw.__version__)"
     bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
         pytest -n $NUM_PROC --capture=fd . --cov=pdfrw --cov-branch --cov-report term-missing pdfrw/'
+
+[testenv:coverage]
+basepython =
+    python3
+
+skip_install =
+    true
+
+allowlist_externals =
+    bash
+
+deps =
+    coverage
+
+commands =
+    bash -c 'coverage combine .coverage.py*'
+    coverage xml
+
+depends =
+    py36
+    py37
+    py38
+    py39
+    py310
+
+[coverage:run]
+parallel=True
 
 [testenv:lint]
 passenv =
@@ -114,11 +145,11 @@ deps =
 
 commands_pre =
     python -m pip install -U pip
-    pip install pdfrw --force-reinstall --pre --prefer-binary -f dist/
+    pip install pdfrw[rpt] --pre -f dist/
 
 commands =
     bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
-        pytest -n $NUM_PROC --capture=no {posargs}'
+        pytest -n $NUM_PROC {posargs}'
 
 [testenv:style]
 passenv =
@@ -181,4 +212,4 @@ deps =
 
 commands =
     #bash -c 'make -C docs/ clean'
-    bash -c 'rm -rf build dist pdfrw/_version.py *.egg-info'
+    bash -c 'rm -rf build dist .coverage* coverage.xml pdfrw/_version.py *.egg-info'
