fix: dev: add deselect for test_add_page, fix test import
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ passenv =
 setenv =
   PYTHONPATH={toxinidir}
   COVERAGE_FILE=.coverage.{envname}
+  ADDPAGE=tests/test_add_page.py::TestAddPage::test_append_page
 
 allowlist_externals =
     bash
@@ -59,7 +60,8 @@ deps =
 commands =
     python -c "import pdfrw; print(pdfrw.__version__)"
     bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
-        pytest -n $NUM_PROC --capture=fd . --cov=pdfrw --cov-branch --cov-report term-missing pdfrw/'
+        pytest -n $NUM_PROC . --deselect $ADDPAGE --cov=pdfrw \
+        --cov-branch --cov-report term-missing pdfrw/'
 
 [testenv:coverage]
 basepython =
@@ -129,6 +131,9 @@ commands =
 
 [testenv:check]
 skip_install = true
+setenv =
+  ADDPAGE=tests/test_add_page.py::TestAddPage::test_append_page
+
 passenv =
     pythonLocation
     CI
@@ -145,11 +150,12 @@ deps =
 
 commands_pre =
     python -m pip install -U pip
+    pip uninstall -y pdfrw
     pip install pdfrw[rpt] --pre -f dist/
 
 commands =
     bash -c 'export NUM_PROC=$(python tests/get_cpu_count.py); \
-        pytest -n $NUM_PROC {posargs}'
+        pytest -n $NUM_PROC --deselect $ADDPAGE {posargs}'
 
 [testenv:style]
 passenv =
