fix: dev: replace asserts with helper funcs, cleanup more lint
* add assertion error handlers to errors.py, replace raw asserts
* cleanup bandit warnings, add # nosec comments for not-issues
* replace pycrypto with pycryptodome, replace md5 with blake2b
  but keep/comment ARC4 for now (legacy PDF RC4 cipher)
* cleanup more pylint warnings, fix readme links

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ zip_safe = True
 # unless dealing with encrypted or reportlab-generated PDFs, or
 # converting images
 rpt =
-    pycryptodome >= 3.9.0
+    pycryptodomex >= 3.9.0
     reportlab >= 3.5.46
     Pillow >= 6.2.2
 test =
