fix: dev: more lint cleanup, at least enough for flake8 and bandit
* fix the above plus some pylint warnings, allow some that need to stay
* allowed nosec lines fall into two categories, either false positives
  or an old/insecure cipher and hash required by old PDF standard
* update tool configs

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -208,6 +208,24 @@ deps =
 commands =
     python -m isort pdfrw/
 
+[testenv:sec]
+skip_install = true
+passenv =
+    PYTHON
+    CI
+    OS
+    PYTHONIOENCODING
+    PIP_DOWNLOAD_CACHE
+
+allowlist_externals = bash
+
+deps =
+    {[base]deps}
+    bandit
+
+commands =
+    bandit -r pdfrw/
+
 [testenv:clean]
 skip_install = true
 allowlist_externals =
